# symmetry

./: Cargo.toml  README.md
.fleet/: run.json
.github/workflows/: rust.yml
core/: Cargo.toml
core/examples/: write.rs
core/src/: color_scheme.rs  lib.rs
core/src/configuration/: mod.rs  repository_type.rs
core/src/sync/: message.rs  mod.rs  status.rs
core/src/sync/providers/: crdt.rs  git.rs  mod.rs
core/src/sync/providers/config/: crdt.rs  git.rs  mod.rs
core/src/traits/: mod.rs  synchronization.rs
core/src/traits/desktop/: color_scheme.rs  mod.rs  wallpaper.rs
src/: app.rs  main.rs
src/pages/: mod.rs  welcome.rs
ui/: Cargo.toml
ui/.fleet/: run.json
ui/src/: app.rs  main.rs  theme.rs
ui/src/components/: appearance.rs  header_bar.rs  wallpaper.rs
ui/src/pages/: desktop.rs  mod.rs  services.rs  settings.rs  welcome.rs
ui/src/widgets/: appearance.rs  header_bar.rs  mod.rs  wallpaper.rs
utils/: Cargo.toml
utils/examples/: write.rs
utils/src/: color_scheme.rs  configuration.rs  lib.rs  resources.rs  sync.rs
utils/src/configuration/: mod.rs
utils/src/sync/: git.rs  mod.rs
utils/src/traits/: synchronization.rs
