[package]
name = "symmetry_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ashpd = "0.4.0"
libcosmic = { git = "https://github.com/pop-os/libcosmic" }
native-dialog = { version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }
once_cell = "1.17.1"
symmetry_core = { path = "../core" }
