[package]
name = "symmetry_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dark-light = "1.0.0"
rust-embed = "6.6.1"
toml = "0.7.3"
serde = { version = "1.0.160", features = ["serde_derive"] }
dirs = "5.0.1"
git2 = "0.16.0"
git2_credentials = "0.11.0"
